# vss-server

./: .gitignore  LICENSE  README.md
.github/workflows/: build-and-deploy-java.yml  build-and-deploy-rust.yml  build-and-deploy.yml  build-and-test-in-memory.yml  impl_tests.yml  ldk-node-integration.yml
app/: build.gradle
app/src/main/java/org/vss/: KVStore.java  VSSApplication.java
app/src/main/java/org/vss/api/: AbstractVssApi.java  DeleteObjectApi.java  GetObjectApi.java  ListKeyVersionsApi.java  PutObjectsApi.java  VssApiEndpoint.java
app/src/main/java/org/vss/exception/: ConflictException.java  NoSuchKeyException.java
app/src/main/java/org/vss/guice/: BaseModule.java
app/src/main/java/org/vss/impl/postgres/: PostgresBackendImpl.java
app/src/main/java/org/vss/impl/postgres/sql/: v0_create_vss_db.sql
app/src/main/proto/: vss.proto
app/src/main/resources/: hikariJdbc.properties
app/src/test/java/org/vss/: AbstractKVStoreIntegrationTest.java
app/src/test/java/org/vss/api/: DeleteObjectApiTest.java  GetObjectApiTest.java  ListKeyVersionsApiTest.java  PutObjectsApiTest.java
app/src/test/java/org/vss/impl/postgres/: PostgresBackendImplIntegrationTest.java
java/: .env  Dockerfile  INSTALL.md  README.md  docker-compose.yml  settings.gradle
java/app/: build.gradle
java/app/src/main/java/org/vss/: VSSApplication.java
java/app/src/main/java/org/vss/api/: AbstractVssApi.java  VssApiEndpoint.java
java/app/src/main/java/org/vss/auth/: AuthResponse.java  Authorizer.java  JwtAuthorizer.java  NoopAuthorizer.java
java/app/src/main/java/org/vss/exception/: AuthException.java
java/app/src/main/java/org/vss/impl/postgres/: PostgresBackendImpl.java
java/app/src/main/resources/: application.properties
java/app/src/test/java/org/vss/: AbstractKVStoreIntegrationTest.java
java/app/src/test/java/org/vss/api/: DeleteObjectApiTest.java  PutObjectsApiTest.java
java/app/src/test/java/org/vss/auth/: JwtAuthorizerTest.java
proto/: vss.proto
rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/api/: .gitignore  Cargo.toml  build.rs
rust/api/src/: auth.rs  error.rs  kv_store.rs  kv_store_tests.rs  lib.rs  types.rs
rust/auth-impls/: Cargo.toml
rust/auth-impls/src/: jwt.rs  lib.rs  signature.rs
rust/impls/: Cargo.toml
rust/impls/src/: in_memory_store.rs  lib.rs  migrations.rs  models.rs  postgres_store.rs
rust/impls/src/postgres/sql/: v0_create_vss_db.sql
rust/server/: Cargo.toml  vss-server-config.toml
rust/server/src/: main.rs  tracing.rs  vss_service.rs
rust/server/src/util/: config.rs  mod.rs
