[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
bytes = "1.4.0"

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }
