[package]
name = "api"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = "0.1.77"
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
bytes = "1.4.0"
rand = { version = "0.8.5", optional = true}

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]

[features]
_test_utils =["rand"]
