[package]
name = "auth-impls"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
jwt = [ "base64", "serde", "serde_json", "rsa" ]
sigs = [ "bitcoin_hashes", "hex-conservative", "secp256k1" ]

[dependencies]
api = { path = "../api" }
async-trait = "0.1.77"
base64 = { version = "0.22.1", optional = true, default-features = false, features = ["std"] }
bitcoin_hashes = { version = "0.19", optional = true, default-features = false }
hex-conservative = { version = "1.0", optional = true, default-features = false }
rsa = { version = "0.9.10", optional = true, default-features = false, features = ["sha2"] }
secp256k1 = { version = "0.31", optional = true, default-features = false, features = [ "global-context" ] }
serde = { version = "1.0.210", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
jsonwebtoken = { version = "9.3.0", default-features = false, features = ["use_pem"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "macros"] }
