[package]
name = "vss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
impls = { path = "../impls" }

hyper = { version = "1", default-features = false, features = ["server", "http1"] }
http-body-util = { version = "0.1", default-features = false }
hyper-util = { version = "0.1", default-features = false, features = ["server-graceful"] }
tokio = { version = "1.38.0", default-features = false, features = ["time", "signal", "rt-multi-thread", "macros"] }
prost = { version = "0.11.6", default-features = false, features = ["std"] }
bytes = "1.4.0"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
toml = { version = "0.8.9", default-features = false, features = ["parse"] }

tracing ={ version = "0.1.43" , default-features = false, features = ["log", "attributes"]}
tracing-subscriber = {version = "0.3.22", default-features = false, features = ["std", "fmt", "json"]}
tracing-opentelemetry ={ version = "0.32.0", default-features = false}
opentelemetry ={ version = "0.31.0", default-features = false}
opentelemetry_sdk ={ version = "0.31.0", default-features = false}
opentelemetry-otlp ={ version = "0.31.0", default-features = false, features = ["trace", "grpc-tonic"]}
opentelemetry-stdout = {version = "0.31.0"}